@startuml
'https://plantuml.com/class-diagram

abstract class AbstractList
abstract AbstractCollection
interface List
interface Collection

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

BaseFile <|-- File
DetectProject <|-- DetectRecord
projectFile <--> DetectRecord
File <--> projectFile
File <--> Image
class ArrayList {
Object[] elementData
size()
}

enum TimeUnit {
DAYS
HOURS
MINUTES
}
class DetectProject<Table>{
-userId <foreign> default 'default'
-detectId <key>
-projectLevel
-createTime
-finishTime
-projectName 无
-mode 检测模式 speed accuracy
-project_result_url 检测结果文本
检测记录n:1检测项目
}
class DetectRecord{
-detectFile
-fileId
}
class BaseFile{
-fileName 文件名称
-fileSize 文件大小
-fileType 文件类型
base64
userId 文件归属, 默认为default
-mode 该文件的检测方式
}
class File<Table>{
-fileId  文件Id <key>
-fileLocation  项目存在本地或者url
-fileResults json字符串或者检测文本的地址
-imageId   文件上传Id <foreign key>
 和fileLocation信息一致
-fileMd5   文件的md5, 判断是否重复上传
-imageQuantity 图像数量
}
class projectFile<Table>{
-fileId, <foreign key>
-detectId <foreign key>
}
class Image<Table> {
-imageId <key>
-imageUrl  压缩包的本地地址
或者文件的url
-md5 文件的唯一标识
}
@enduml